{
    "name": "RobotControls",
    "maps": [
        {
            "name": "RobotMovement",
            "id": "9d302dd9-f168-4c41-a534-b6f921dd6ccf",
            "actions": [
                {
                    "name": "LowerYAxis",
                    "type": "PassThrough",
                    "id": "33bbdd7d-36c4-4ad4-9891-5172877dfe17",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cd89cbf-ab32-4aa5-b6a7-e8aaaa5cae38",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LowerYAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}